Fixed minor issue with employer wrapping around employment dates (instead of flowing underneath).

--- a/css/resume.css
+++ b/css/resume.css
@@ -59,6 +59,7 @@ div.job p.job-title {
 div.job p.employment-dates {
   display: inline;
   float: right;
+  margin-bottom: 0;
 }
 
 div.job p.employer {
